DoConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: negosuite-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: metabase.negosuite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 80
  - host: api.negosuite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: negosuite-api-service
            port:
              number: 80
  - host: apicrewasia.negosuite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cai-crewing-api-service
            port:
              number: 80
